--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -35,6 +34,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/react": "^18.2.18",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "prisma": "^5.0.0",
