--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://rest:rest@cluster0.km0ukrx.mongodb.net/rest"
+DATABASE_URL="mongo db uri"
 NEXTAUTH_JWT_SECRET="NEXTAUTH_JWT_SECRET"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
